# QML

./: .gitignore  README.md
Calculadora/: CMakeLists.txt  MyCalculatorButton.qml  MyDialog.qml  main.cpp  main.qml
NubankLogin/: CMakeLists.txt  NuButton.qml  NuTextInput.qml  NubankLogin.qml  NubankLogin.qmlproject  NubankLogin.qmlproject.qtds  main.cpp  main.qml  qmlmodules
NubankLogin/content/: App.qml  Screen01.ui.qml
NubankLogin/imports/: CMakeLists.txt
NubankLogin/imports/NubankLogin/: CMakeLists.txt  qmldir
NubankLogin/imports/NubankLogin/designer/: plugin.metainfo
NubankLogin/src/: app_environment.h  import_qml_plugins.h  main.cpp
